# TSBK03_ImageQuilting

./: .gitignore  CMakeLists.txt  ImageQuilting  image_quilting  main.cpp  makefile  output_random_128.tga
images/: berries.tga  berries_big.tga  chocolate.tga  pattern1.tga  pattern2.tga  pattern3.tga  pattern_small.tga  stone_wall.tga  water.tga
images/output_images/: 2_tiles.tga  berries_blackandred.tga  berries_red.tga  chocolate.tga  nice.tga  output_neighbor_no_corners.tga  pattern2_2.tga  pattern2_2_matching.tga  pattern2_2_smalloverlap.tga  pattern3_0.tga  pattern3_1.tga  pattern3_2.tga  uppochner_2.tga  uppochner_stor.tga  water_1.tga  water_2.tga  water_2_completeoverlap.tga
images/output_images/color_spaces/: hsl.tga  hsv.tga  lab.tga  rgb.tga
images/output_images/methods/: water_random.tga
include/: ImageQuilter.cpp  ImageQuilter.h  ImageQuilter_minerror.cpp  ImageQuilter_neighbor.cpp  ImageQuilter_random.cpp  RandomGenerator.cpp  RandomGenerator.h  Square.cpp  Square.h  main.cpp
include/common/: CMakeLists.txt  GL_utilities.c  loadobj.c~
shaders/: combineshader.frag  minerrorshader.frag  overlapshader.frag  translateshader.vert  transparencyshader.frag
